fixed factory.ts causing optimization bailouts

--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -37,7 +37,8 @@
             "tsConfig": "tsconfig.app.json",
             "assets": ["src/favicon.ico", "src/assets"],
             "styles": ["src/custom-theme.scss", "src/styles.css"],
-            "scripts": []
+            "scripts": [],
+            "allowedCommonJsDependencies": ["factory.ts"]
           },
           "configurations": {
             "production": {
