--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,8 +21,10 @@
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.1.0",
     "@faker-js/faker": "^7.6.0",
+    "ng2-file-upload": "^4.0.0",
     "ngx-pagination": "^6.0.3",
     "rxjs": "~7.8.0",
+    "safe-pipe": "^2.0.5-0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
