--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,8 @@
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.1.0",
     "@faker-js/faker": "^7.6.0",
+    "chart.js": "^4.2.1",
+    "ng2-charts": "^4.1.1",
     "ng2-file-upload": "^4.0.0",
     "ngx-pagination": "^6.0.3",
     "rxjs": "~7.8.0",
