--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,9 @@
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.1.0",
     "@faker-js/faker": "^7.6.0",
+    "@ngrx/effects": "^15.4.0",
+    "@ngrx/store": "^15.4.0",
+    "@ngrx/store-devtools": "^15.4.0",
     "chart.js": "^4.2.1",
     "ng2-charts": "^4.1.1",
     "ng2-file-upload": "^4.0.0",
@@ -42,6 +45,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
+    "text-table": "^0.2.0",
     "typescript": "~4.9.4"
   }
 }
